syntax = "proto3";

message ConditionTableRow
{
	 uint32 id = 1;
	 uint32 type = 2;
	 repeated uint32 condition1 = 3;
	 repeated uint32 condition2 = 4;
	 repeated uint32 condition3 = 5;
	 uint32 amount_type = 6;
	 uint32 amount = 7;
	 uint32 operator = 8;
}

message ConditionTable
{
	 repeated ConditionTableRow data = 1;
}

message MissionTableRow
{
	 uint32 id = 1;
	 repeated uint32 condition_id = 2;
	 uint32 condition_order = 3;
}

message MissionTable
{
	 repeated MissionTableRow data = 1;
}
